name:                librarian
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/librarian#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable librarian
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       aeson >= 1.0.2 && < 1.1,
                       base >= 4.7 && < 5,
                       bytestring >= 0.10.8 && < 0.11,
                       filepath >= 1.4.1 && < 1.5,
                       time == 1.6.*,
                       http-conduit == 2.2.3.*,
                       http-client-tls == 0.3.*
